--- a/src/Pages/profile/CandidateProfile.css
+++ b/src/Pages/profile/CandidateProfile.css
@@ -12,7 +12,7 @@
   padding: 10px 60px!important;
   border-radius: 8px;
   padding: 20px;
-  width: fit-content;
+  width: 60vh;
   text-align: center;
   box-shadow: 0px 0px 10px 0px #000;
   background-color: #f0f0f0;
