--- a/src/Components/InterviewResults/InterviewResults.css
+++ b/src/Components/InterviewResults/InterviewResults.css
@@ -1,8 +1,12 @@
 .ResultMain{
 }
 .ResultImg{
-    height: 77px;
-    padding: 22px 0;
+    height: 84px;
+    padding: 18px 0;
+}
+.img{
+    display: flex;
+    width: 30%;
 }
 .ResultImgDiv{
     align-items: center;
